--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,18 @@
 
     <groupId>org.example</groupId>
     <artifactId>springboot-shiro</artifactId>
+    <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>hello-shiro</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <shiro-core.version>1.7.1</shiro-core.version>
+        <slf4j.version>1.7.30</slf4j.version>
+        <log4j.version>1.2.17</log4j.version>
     </properties>
 
 </project>
